--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,18 +23,18 @@ jobs:
 
     - name: Install dependencies
       run: npm install
-      working-directory: ./johyemtol.github.io  # 여기를 실제 package.json이 있는 디렉토리로 설정하세요
+      working-directory: ./  # package.json이 루트 디렉토리에 있는 경우
 
     - name: Build the project
       run: npm run build
-      working-directory: ./johyemtol.github.io  # 여기를 실제 package.json이 있는 디렉토리로 설정하세요
+      working-directory: ./  # package.json이 루트 디렉토리에 있는 경우
 
     - name: Inject API Key
       run: |
         echo "export const apiKey = '${{ secrets.OPENAI_API_KEY }}';" > ./src/apiKey.js
       shell: bash
-      working-directory: ./johyemtol.github.io  # 여기를 실제 package.json이 있는 디렉토리로 설정하세요
+      working-directory: ./  # package.json이 루트 디렉토리에 있는 경우
 
     - name: Deploy
       run: npm run deploy
-      working-directory: ./johyemtol.github.io  # 여기를 실제 package.json이 있는 디렉토리로 설정하세요
+      working-directory: ./  # package.json이 루트 디렉토리에 있는 경우
